Added Tar, Far and FRR metrics

--- a/1.Notebooks/Eval.ipynb
+++ b/1.Notebooks/Eval.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,25 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append('../../src/models/face-recognition')\n",
-    "from evaluate import eval, extract_deep_features, eval_accuracy, find_best_threshold\n",
+    "from evaluate import eval, extract_deep_features, eval_accuracy, find_best_threshold, calculate_tar_far_frr\n",
+    "from models import (\n",
+    "    sphere20,\n",
+    "    sphere36,\n",
+    "    sphere64,\n",
+    "    MobileNetV1,\n",
+    "    MobileNetV2,\n",
+    "    mobilenet_v3_small,\n",
+    "    mobilenet_v3_large\n",
+    ")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")import sys\n",
+    "import os\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "sys.path.append('../../src/models/face-recognition')\n",
+    "from evaluate import eval, extract_deep_features, eval_accuracy, find_best_threshold, calculate_tar_far_frr\n",
     "from models import (\n",
     "    sphere20,\n",
     "    sphere36,\n",
@@ -192,12 +210,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cálculo da Similaridade no LFW"
+    "## Cálculo das Métricas no LFW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +239,13 @@
     "print(\"Starting evaluation on LFW dataset...\")\n",
     "print(\"=\"*50)\n",
     "\n",
-    "# Executar avaliação original\n",
-    "similarity_score, predictions = eval(model, model_path=None, lfw_root=lfw_dataset_path, device=device)\n",
+    "# Executar avaliação com as novas métricas\n",
+    "similarity_score, predictions, metrics = eval(\n",
+    "    model, \n",
+    "    model_path=None, \n",
+    "    lfw_root=lfw_dataset_path, \n",
+    "    device=device\n",
+    ")\n",
     "\n",
     "# Calcular acurácia no notebook\n",
     "if len(predictions) > 0:\n",
@@ -232,13 +255,67 @@
     "    print(f\"\\nEvaluation complete!\")\n",
     "    print(f\"Average Similarity Score: {similarity_score:.4f}\")\n",
     "    print(f\"LFW Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"Total pairs evaluated: {len(predictions)}\")\n",
+    "    print(f\"\\nBiometric Metrics at threshold 0.35:\")\n",
+    "    print(f\"TAR (True Acceptance Rate): {metrics['TAR']:.4f}\")\n",
+    "    print(f\"FAR (False Acceptance Rate): {metrics['FAR']:.4f}\")\n",
+    "    print(f\"FRR (False Rejection Rate): {metrics['FRR']:.4f}\")\n",
+    "    print(f\"\\nTotal pairs evaluated: {len(predictions)}\")\n",
     "else:\n",
     "    print(\"=\"*50)\n",
     "    print(f\"\\nEvaluation complete!\")\n",
     "    print(f\"Average Similarity Score: {similarity_score:.4f}\")\n",
     "    print(f\"No valid pairs found for accuracy calculation\")\n",
     "    print(f\"Total pairs evaluated: 0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise em Diferentes Tresholds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(predictions) > 0:\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(\"ANÁLISE DE MÉTRICAS EM DIFERENTES THRESHOLDS\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    # Testar diferentes thresholds\n",
+    "    test_thresholds = [0.25, 0.30, 0.35, 0.40, 0.45, 0.50]\n",
+    "    \n",
+    "    print(f\"\\n{'Threshold':<12} {'TAR':<10} {'FAR':<10} {'FRR':<10} {'Accuracy':<10}\")\n",
+    "    print(\"-\" * 60)\n",
+    "    \n",
+    "    for thresh in test_thresholds:\n",
+    "        metrics_at_thresh = calculate_tar_far_frr(predictions, thresh)\n",
+    "        acc_at_thresh = eval_accuracy(predictions, thresh)\n",
+    "        \n",
+    "        print(f\"{thresh:<12.2f} {metrics_at_thresh['TAR']:<10.4f} \"\n",
+    "              f\"{metrics_at_thresh['FAR']:<10.4f} {metrics_at_thresh['FRR']:<10.4f} \"\n",
+    "              f\"{acc_at_thresh:<10.4f}\")\n",
+    "    \n",
+    "    # Encontrar o melhor threshold (EER - Equal Error Rate)\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(\"MELHOR THRESHOLD (Minimizando EER)\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    best_threshold, best_metrics = find_best_threshold(predictions)\n",
+    "    best_accuracy = eval_accuracy(predictions, best_threshold)\n",
+    "    \n",
+    "    print(f\"\\nBest Threshold: {best_threshold:.4f}\")\n",
+    "    print(f\"TAR: {best_metrics['TAR']:.4f}\")\n",
+    "    print(f\"FAR: {best_metrics['FAR']:.4f}\")\n",
+    "    print(f\"FRR: {best_metrics['FRR']:.4f}\")\n",
+    "    print(f\"Accuracy: {best_accuracy:.4f}\")\n",
+    "    print(f\"EER (|FAR - FRR|): {abs(best_metrics['FAR'] - best_metrics['FRR']):.4f}\")\n",
+    "else:\n",
+    "    print(\"No predictions to analyze.\")"
    ]
   },
   {
